add manual trigger

--- a/.github/workflows/preview-pr.yml
+++ b/.github/workflows/preview-pr.yml
@@ -3,6 +3,7 @@ name: Preview Documentation
 on:
   pull_request:
     types: [opened, synchronize]
+    workflow_dispatch:
 
 env:
   PR_NUMBER: ${{ github.event.pull_request.number }}
