remove leftovers for preview of docs

--- a/.github/workflows/preview-pr.yml
+++ b/.github/workflows/preview-pr.yml
@@ -23,18 +23,18 @@ jobs:
           make publish/PR${{ env.PR_NUMBER }}/
       - 
         name: Deploy 🚀
-        # only deploy when push to main
-        if: github.event_name != 'pull_request'
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           # The branch the action should deploy to.
           branch: gh-pages
-          # The folder the action should deploy. Adapt if you changed in Quarto config
+          # The folder the action should deploy.
           folder: publish/
           # Organizations require token of the bearer!
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - uses: actions/github-script@v5
+      - 
+        name: Comment Link
+        uses: actions/github-script@v5
         if: steps.preview.outcome == 'success'
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
@@ -44,5 +44,5 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
 
-              body: 'Docs can be previewed here: ${{ env.GHP_URL }}/PR${{ env.PR_NUMBER }}/manuscript.pdf'
+              body: 'Manuscript can be previewed here: ${{ env.GHP_URL }}/PR${{ env.PR_NUMBER }}/manuscript.pdf'
             })
