--- a/.github/workflows/preview-pr.yml
+++ b/.github/workflows/preview-pr.yml
@@ -27,12 +27,14 @@ jobs:
         with:
           # The branch the action should deploy to.
           branch: gh-pages
-          # The folder the action should deploy. Adapt if you changed in Quarto config
+          # The folder the action should deploy.
           folder: publish/
           # Organizations require token of the bearer!
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - uses: actions/github-script@v5
+      - 
+        name: Comment Link
+        uses: actions/github-script@v5
         if: steps.deploy.outcome == 'success'
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
@@ -42,5 +44,5 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
 
-              body: 'Docs can be previewed here: ${{ env.GHP_URL }}/PR${{ env.PR_NUMBER }}/manuscript.pdf'
+              body: 'Manuscript can be previewed here: ${{ env.GHP_URL }}/PR${{ env.PR_NUMBER }}/manuscript.pdf'
             })
