--- a/.github/workflows/preview-pr.yml
+++ b/.github/workflows/preview-pr.yml
@@ -35,7 +35,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: actions/github-script@v5
-        if: steps.deploy.outcome == 'success'
+        if: steps.preview.outcome == 'success'
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
