--- a/.github/workflows/preview-pr.yml
+++ b/.github/workflows/preview-pr.yml
@@ -23,6 +23,7 @@ jobs:
           make publish/PR${{ env.PR_NUMBER }}/
       - 
         name: Deploy 🚀
+        id: deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           # The branch the action should deploy to.
@@ -35,7 +36,7 @@ jobs:
       - 
         name: Comment Link
         uses: actions/github-script@v5
-        if: steps.preview.outcome == 'success'
+        if: steps.deploy.outcome == 'success'
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
