dont force overwrite gh-pages

--- a/.github/workflows/preview-pr.yml
+++ b/.github/workflows/preview-pr.yml
@@ -32,6 +32,7 @@ jobs:
           folder: publish/
           # Organizations require token of the bearer!
           token: ${{ secrets.GITHUB_TOKEN }}
+          force: false
 
       - 
         name: Comment Link
