also don't clean github-pages

--- a/.github/workflows/preview-pr.yml
+++ b/.github/workflows/preview-pr.yml
@@ -33,6 +33,7 @@ jobs:
           # Organizations require token of the bearer!
           token: ${{ secrets.GITHUB_TOKEN }}
           force: false
+          clean: false
 
       - 
         name: Comment Link
