--- a/.repro/Dockerfile_packages
+++ b/.repro/Dockerfile_packages
@@ -2,5 +2,8 @@ RUN install2.r --error --skipinstalled \
   ggplot2 \ 
   ggthemes \ 
   patchwork \ 
+  showtext \ 
+  svglite \ 
   tidyverse \ 
-  tikzDevice
+  tikzDevice \ 
+  xaringanthemer
