--- a/.repro/Makefile_Rmds
+++ b/.repro/Makefile_Rmds
@@ -1,4 +1,4 @@
-manuscript.tex: manuscript.Rmd R/plots.R references.bib abstract.md data/simulation.rds
+manuscript.tex: manuscript.Rmd R/plots.R references.bib abstract.md data/simulation.rds apa.csl
 	$(RUN1) Rscript -e 'rmarkdown::render("$(WORKDIR)/$<", "all")' $(RUN2)
 
 presentation.html: presentation.Rmd
