add qrcode package

--- a/.repro/Dockerfile_packages
+++ b/.repro/Dockerfile_packages
@@ -3,6 +3,7 @@ RUN install2.r --error --skipinstalled \
   ggthemes \ 
   here \ 
   patchwork \ 
+  qrcode \ 
   showtext \ 
   svglite \ 
   tidyverse \ 
