--- a/.github/workflows/preview-pr.yml
+++ b/.github/workflows/preview-pr.yml
@@ -1,8 +1,9 @@
 name: Preview Documentation
 
 on:
-  pull_request_target:
-  workflow_dispatch:
+  pull_request:
+    types: [opened, synchronize]
+    workflow_dispatch:
 
 permissions: write-all
 
