render and deploy should not clean the publish folder

--- a/.github/workflows/render-n-deploy-pdf.yml
+++ b/.github/workflows/render-n-deploy-pdf.yml
@@ -31,3 +31,5 @@ jobs:
           folder: publish/
           # Organizations require token of the bearer!
           token: ${{ secrets.GITHUB_TOKEN }}
+          force: false
+          clean: false
