add missing software to docker image

--- a/.repro/Dockerfile_manual
+++ b/.repro/Dockerfile_manual
@@ -1,1 +1,1 @@
-RUN tlmgr install apa7 pgf preview
+RUN tlmgr install apa7 pgf preview scalerel threeparttable endfloat was multirow threeparttablex environ trimspaces xpatch csquotes
