--- a/.repro/Dockerfile_packages
+++ b/.repro/Dockerfile_packages
@@ -3,6 +3,7 @@ RUN install2.r --error --skipinstalled \
   ggplot2 \ 
   ggthemes \ 
   here \ 
+  pacman \ 
   patchwork \ 
   qrcode \ 
   rticles \ 
